Finalized the new entrant wizard, stable, bug-free and sexy

--- a/SimTECH/SimTECH/Pages/Racing/Qualifying.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Qualifying.razor
@@ -245,7 +245,7 @@
     private List<QualifyingDriver> DriversInQ3 { get; set; } = new();
 
     // Two ways to do this: three different racedriver lists for each session
-    // Alternatively make a custom class which has an identifier for which session the values are
+    // Alternatively make a custom class which has an identifier for which session the values are (ARE WHAT?)
 
     private bool loading = true;
     private int advancedQ1, advancedQ2, advancedQ3 = 0;
