--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -12,10 +12,9 @@
 
 <PageTitle>Overview</PageTitle>
 
-@* still should confirm if isfixed also works when re-assigning the object by loading a new season *@
-<CascadingValue Value="@Season" IsFixed="true">
-    @if (Season != null)
-    {
+@if (Season != null)
+{
+    <CascadingValue Value="@Season" IsFixed="true">
         <MudTabs Outlined="true" Centered="true" @bind-ActivePanelIndex="_activeTabIndex">
             <MudTabPanel Text="Overview">
                 <MudGrid Spacing="4">
@@ -180,8 +179,8 @@
                 </MudGrid>
             </MudTabPanel>
         </MudTabs>
-    }
-</CascadingValue>
+    </CascadingValue>
+}
 
 @code {
     [Parameter] public long SeasonId { get; set; }
@@ -274,6 +273,6 @@
 
     async Task ShowQualyBattles() => _ = await _dialogService.ShowAsync<QualyBattles>("QualifyingBattles", new DialogParameters { ["SeasonId"] = SeasonId });
 
-    void GoToAddEntrants() => _nav.NavigateTo($"/addentrantswizard/{SeasonId}");
+    void GoToAddEntrants() => _nav.NavigateTo($"/entrantwizard/{SeasonId}");
     void GoToComponentUsage() => _nav.NavigateTo($"/components/{SeasonId}");
 }
