Added a base for a new statistic

--- a/SimTECH/SimTECH/Pages/Statistics/DriverCompareStat.razor
+++ b/SimTECH/SimTECH/Pages/Statistics/DriverCompareStat.razor
@@ -16,7 +16,7 @@
                             {
                                 <MudSelectItem Value="driver">
                                     <CountryFlag Code="driver.Country" Size="FlagSize.Tiny" />
-                                    @driver.FullName
+                                    <MudText>@driver.FullName</MudText>
                                 </MudSelectItem>
                             }
                         </MudSelect>
@@ -25,7 +25,7 @@
                             {
                                 <MudSelectItem Value="driver">
                                     <CountryFlag Code="driver.Country" Size="FlagSize.Tiny" />
-                                    @driver.FullName
+                                    <MudText>@driver.FullName</MudText>
                                 </MudSelectItem>
                             }
                         </MudSelect>
@@ -54,7 +54,7 @@
                         </div>
                     </MudStack>
 
-                    <div class="pa-2" style="height: 550px">
+                    <div class="pa-2" style="min-height: 550px">
                         @if (preparedData)
                         {
                             <ApexCharts.ApexChart @ref="chart" TItem="DataPoint" Title="Driver compare" Options="@options" Height="500">
